fix: remove overflow hidden from cards to make safari drop shadow work

--- a/source/sass/component/_card.scss
+++ b/source/sass/component/_card.scss
@@ -6,7 +6,6 @@ $c-card-border-radius: var(--c-card-border-radius, $border-radius-lg) !default;
     position: relative;
     background-color: $color-white;
     border-radius: $c-card-border-radius;
-    overflow: hidden;
 
     &__header i{
         vertical-align: top;
